--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cdk8s-pipelines",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nathan.good/cdk8s-pipelines.git"
+    "url": "https://github.com/cloud-native-toolkit/cdk8s-pipelines.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -34,12 +34,13 @@
     "organization": false
   },
   "devDependencies": {
+    "@cdk8s/projen-common": "^0.0.436",
     "@types/jest": "^29.5.3",
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "cdk8s": "1.4.10",
-    "constructs": "3.3.196",
+    "cdk8s": "2.30.0",
+    "constructs": "10.0.0",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.6.0",
@@ -59,11 +60,15 @@
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "cdk8s": "^1.4.10",
-    "constructs": "^3.3.196"
+    "cdk8s": "^2.30.0",
+    "constructs": "^10.0.0"
   },
   "keywords": [
-    "cdk"
+    "cdk",
+    "cdk8s",
+    "kubernetes",
+    "pipelines",
+    "tekton"
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
