Updated tasks to add prepare
Signed-off-by: Nathan Good <nathan.good@ibm.com>

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -192,6 +192,14 @@
       "name": "pre-compile",
       "description": "Prepare the project for compilation"
     },
+    "prepare": {
+      "name": "prepare",
+      "steps": [
+        {
+          "exec": "npx projen compile"
+        }
+      ]
+    },
     "release": {
       "name": "release",
       "description": "Prepare a release from \"main\" branch",
